--- a/public/css/post-formats.css
+++ b/public/css/post-formats.css
@@ -1,7 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=IBM+Plex+Mono:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;1,100;1,200;1,300;1,400;1,500;1,600;1,700&family=Inter:wght@100..900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 
 .post-body :is(h1, h2, h3, h4, h5, h6) {
-  padding: 0 1.3rem;
+  padding: 0 1rem;
 }
 
 .post-body p,
@@ -89,7 +89,7 @@
   font-weight: 400;
   line-height: 1.4;
   margin-bottom: .9rem;
-  padding: 0 1.3rem;
+  padding: 0 1rem;
 }
 
 
@@ -122,7 +122,7 @@
 
 .post-body blockquote {
   padding: 10px 20px;
-  margin: 0 0 1.3rem;
+  margin: 0 0 1rem;
   border-left: 5px solid #eeeeee;
   /* Adjust color as needed */
   background-color: #f5f5f5;
