--- a/public/css/search.css
+++ b/public/css/search.css
@@ -6,7 +6,7 @@
 
 #posts-container {
     box-sizing: border-box;
-    padding: 0 1.3rem;
+    padding: 0 1rem;
     margin-top: 17px;
 }
 
